# empire-block

./: .env.example  .gitignore  Anchor.toml  README.md  package-lock.json  package.json  tailwind.config.ts
programs/empire-blocks/: Cargo.toml
programs/empire-blocks/src/: errors.rs  lib.rs
programs/empire-blocks/src/instructions/: defend_territory.rs  initialize_grid.rs  initiate_battle.rs  mint_territory.rs  mod.rs  resolve_battle.rs  transfer_territory.rs  update_empire.rs
programs/empire-blocks/src/state/: battle.rs  empire.rs  grid.rs  mod.rs  territory.rs
src/: index.ts  indexer.ts
src/api/: client.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/battles/: page.tsx
src/app/leaderboard/: page.tsx
src/app/marketplace/: page.tsx
src/components/Battle/: BattleArena.tsx
src/components/Dashboard/: EmpireMap.tsx  PlayerDashboard.tsx
src/components/Grid/: GridCanvas.tsx  GridCell.tsx
src/components/Landing/: LandingPage.tsx
src/components/Layout/: Footer.tsx  Header.tsx
src/components/Leaderboard/: Podium.tsx  RankingsTable.tsx  StatsCards.tsx
src/components/Marketplace/: BuyModal.tsx  (+4 more)
src/config/: index.ts
src/controllers/: battle.controller.ts  grid.controller.ts  marketplace.controller.ts  player.controller.ts
src/hooks/: useBattle.ts  useGrid.ts  useLeaderboard.ts  useMarketplace.ts  useMintTerritory.tsx  usePlayerTerritories.ts  useProgram.ts  useTerritory.ts
src/routes/: api.routes.ts
src/services/: database.service.ts  solana.service.ts
src/store/: playerStore.ts
src/utils/: analytics.ts  beta.ts  logger.ts
(+16 files in other folders)
