[package]
name = "empire-blocks"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "empire_blocks"

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
mpl-token-metadata = "1.13.1"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
